--- a/app/views/appeal/enforcement/v1/upload-documents/grounds-supporting-docs.html
+++ b/app/views/appeal/enforcement/v1/upload-documents/grounds-supporting-docs.html
@@ -1,11 +1,12 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Are you a tenant of the agricultural holding?' %}
+{% set title = 'Do you have any documents to support your grounds and facts?' %}
 
 {% block questions %}
+
   {{ govukRadios({
-    idPrefix: 'agricultural-tenant',
-    name: 'agricultural-tenant',
+    idPrefix: 'grounds-supporting-docs',
+    name: 'grounds-supporting-docs',
     fieldset: {
       legend: {
         html: title,
@@ -17,12 +18,12 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('agricultural-tenant','Yes')
+        checked: checked('grounds-supporting-docs','Yes')
       },
       {
         html: 'No',
         value: 'No',
-        checked: checked('agricultural-tenant','No')
+        checked: checked('grounds-supporting-docs','No')
       }
     ]
   }) }}
