--- a/app/views/index.html
+++ b/app/views/index.html
@@ -92,7 +92,7 @@
           <a href="/appeal/cas-adverts/">CAS and adverts</a>
         </li>
         <li>
-          Enforcement (needs review)
+          <a href="/appeal/enforcement">Enforcement</a>
         </li>
         <li>
           <a href="/appeal/ldc/">Lawful development certificate</a>
