--- a/app/views/appeal/enforcement/v1/prepare-appeal/address.html
+++ b/app/views/appeal/enforcement/v1/prepare-appeal/address.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'What&rsquo;s the address of the appeal site?' %}
+{% set title = 'What is the address of the appeal site?' %}
 
 {% block questions %}
   {% call govukFieldset({
@@ -11,7 +11,6 @@
     }
   }) %}
 
-    <p class="govuk-hint">This should match the address on the application to the local planning authority</p>
 
     {{ govukInput({
       id: 'address-line-1',
