--- a/app/views/appeal/enforcement/v1/prepare-appeal/planning-permission.html
+++ b/app/views/appeal/enforcement/v1/prepare-appeal/planning-permission.html
@@ -1,12 +1,11 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Are you an agent?' %}
+{% set title = 'Did you apply for planning permission and pay the application fee?' %}
 
 {% block questions %}
   {{ govukRadios({
-    idPrefix: 'appellant-check',
-    name: 'appellant-check',
-    classes: '',
+    idPrefix: 'planning-permission',
+    name: 'planning-permission',
     fieldset: {
       legend: {
         html: title,
@@ -18,12 +17,12 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('appellant-check','Agent')
+        checked: checked('planning-permission','Yes')
       },
       {
         html: 'No',
         value: 'No',
-        checked: checked('appellant-check','Appellant')
+        checked: checked('planning-permission','No')
       }
     ]
   }) }}
