--- a/app/views/appeal/enforcement/v1/task-list__upload.html
+++ b/app/views/appeal/enforcement/v1/task-list__upload.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Application form'
+          html: 'Grounds and facts'
         },
         value: {
           html: data['application'] | join('<br>') if data['application'] else 'application.pdf'
@@ -47,24 +47,24 @@
       },
       {
         key: {
-          html: 'Development description correct'
+          html: 'Do you have any documents to support your grounds and facts?'
         },
         value: {
-          html: data['application-desc-correct']
+          html: data['grounds-supporting-docs']
         }
-        if data['application-desc-correct-complete'] else
+        if data['grounds-supporting-docs'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
         actions: {
           items: [
             {
-              href: 'upload-documents/application-desc-correct?cya=true',
+              href: 'upload-documents/grounds-supporting-docs?cya=true',
               html: 'Change'
             }
-            if data['application-desc-correct-complete'] else
+            if data['grounds-supporting-docs'] else
             {
-              href: 'upload-documents/application-desc-correct',
+              href: 'upload-documents/grounds-supporting-docs',
               html: 'Answer'
             }
           ]
@@ -72,10 +72,10 @@
       },
       {
         key: {
-          html: 'Description of development'
+          html: 'Grounds and facts supporting documents'
         },
         value: {
-          html: data['description-detail'] if data['description-detail'] else '(Most recent description of development here)'
+          html: data['grounds-supporting-docs'] if data['grounds-supporting-docs'] else '(Most recent description of development here)'
         }
         if data['description-detail-complete'] else
         {
@@ -84,12 +84,12 @@
         actions: {
           items: [
             {
-              href: 'upload-documents/description-of-development?cya=true',
+              href: 'upload-documents/grounds-supporting-docs-upload?cya=true',
               html: 'Change'
             }
             if data['description-detail-complete'] else
             {
-              href: 'upload-documents/description-of-development',
+              href: 'upload-documents/grounds-supporting-docs-upload',
               html: 'Answer'
             }
           ]
@@ -97,49 +97,24 @@
       },
       {
         key: {
-          html: 'Plans, drawings and supporting documents'
+          html: 'Enforcement notice'
         },
         value: {
-          html: data['plans'] | join('<br>') if data['plans'] else 'plans.pdf'
+          html: data['enforcement-notice'] or 'No'
         }
-        if data['plans-complete'] else
+        if data['enforcement-notice'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
         actions: {
           items: [
             {
-              href: 'upload-documents/plans?cya=true',
+              href: 'upload-documents/enforcement-notice?cya=true',
               html: 'Change'
             }
-            if data['plans-complete'] else
+            if data['enforcement-notice-complete'] else
             {
-              href: 'upload-documents/plans',
-              html: 'Upload'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Separate ownership certificate in application'
-        },
-        value: {
-          html: data['ownership-certificate-check'] or 'No'
-        }
-        if data['ownership-certificate-check-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/ownership-certificate-check?cya=true',
-              html: 'Change'
-            }
-            if data['ownership-certificate-check-complete'] else
-            {
-              href: 'upload-documents/ownership-certificate-check',
+              href: 'upload-documents/enforcement-notice',
               html: 'Answer'
             }
           ]
@@ -147,207 +122,33 @@
       },
       {
         key: {
-          html: 'Separate ownership certificate'
+          html: 'Enforcement plan'
         },
         value: {
-          html: data['ownership-certificate'] | join('<br>') if data['ownership-certificate'] else 'ownership-certificate.pdf'
+          html: data['enforcement-plan'] or 'No'
         }
-        if data['ownership-certificate-complete'] else
+        if data['enforcement-plan'] else
         {
           html: '<span class="govuk-hint">Not started</span>'
         },
         actions: {
           items: [
             {
-              href: 'upload-documents/ownership-certificate?cya=true',
+              href: 'upload-documents/enforcement-plan?cya=true',
               html: 'Change'
             }
-            if data['ownership-certificate-complete'] else
+            if data['enforcement-plan-complete'] else
             {
-              href: 'upload-documents/ownership-certificate',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['ownership-certificate-check'] == 'Yes',
-      {
-        key: {
-          html: 'Design and access statement in application'
-        },
-        value: {
-          html: data['design-access-check'] or 'No'
-        }
-        if data['design-access-check-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/design-access-check?cya=true',
-              html: 'Change'
-            }
-            if data['design-access-check-complete'] else
-            {
-              href: 'upload-documents/design-access-check',
+              href: 'upload-documents/enforcement-plan',
               html: 'Answer'
             }
           ]
         }
       },
+      
       {
         key: {
-          html: 'Design and access statement'
-        },
-        value: {
-          html: data['design-access'] | join('<br>') if data['design-access'] else 'design-access.pdf'
-        }
-        if data['design-access-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/design-access?cya=true',
-              html: 'Change'
-            }
-            if data['design-access-complete'] else
-            {
-              href: 'upload-documents/design-access',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['design-access-check'] == 'Yes',
-      {
-        key: {
-          html: 'Decision letter'
-        },
-        value: {
-          html: data['decision-letter'] | join('<br>') if data['decision-letter'] else 'decision-letter.pdf'
-        }
-        if data['decision-letter-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/decision-letter?cya=true',
-              html: 'Change'
-            }
-            if data['decision-letter-complete'] else
-            {
-              href: 'upload-documents/decision-letter',
-              html: 'Upload'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Appeal statement'
-        },
-        value: {
-          html: data['appeal-statement'] | join('<br>') if data['appeal-statement'] else 'appeal-statement.pdf'
-        }
-        if data['appeal-statement-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/appeal-statement?cya=true',
-              html: 'Change'
-            }
-            if data['appeal-statement-complete'] else
-            {
-              href: 'upload-documents/appeal-statement',
-              html: 'Upload'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Draft statement of common ground'
-        },
-        value: {
-          html: data['common-ground'] | join('<br>') if data['common-ground'] else 'common-ground.pdf'
-        }
-        if data['common-ground-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/common-ground?cya=true',
-              html: 'Change'
-            }
-            if data['common-ground-complete'] else
-            {
-              href: 'upload-documents/common-ground',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['procedure'] == 'Inquiry' or data['procedure'] == 'Hearing',
-      {
-        key: {
-          html: 'Add new plans or drawings'
-        },
-        value: {
-          html: data['new-plans-check'] or 'No'
-        }
-        if data['new-plans-check-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/new-plans-check?cya=true',
-              html: 'Change'
-            }
-            if data['new-plans-check-complete'] else
-            {
-              href: 'upload-documents/new-plans-check',
-              html: 'Answer'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'New plans or drawings'
-        },
-        value: {
-          html: data['new-plans'] | join('<br>') if data['new-plans'] else 'new-plans.pdf'
-        }
-        if data['new-plans-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'upload-documents/new-plans?cya=true',
-              html: 'Change'
-            }
-            if data['new-plans-complete'] else
-            {
-              href: 'upload-documents/new-plans',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['new-plans-check'] == 'Yes',
-      {
-        key: {
-          html: 'Add planning obligation'
+          html: 'Do you plan to submit a planning obligation to support your appeal?'
         },
         value: {
           html: data['planning-obligation-check'] or 'No'
@@ -372,7 +173,7 @@
       },
       {
         key: {
-          html: 'Planning obligation status'
+          html: 'What is the status of your planning obligation?'
         },
         value: {
           html: data['planning-obligation-status'] or 'Not started yet'
