--- a/app/views/appeal/enforcement/v1/prepare-appeal/other-appellants.html
+++ b/app/views/appeal/enforcement/v1/prepare-appeal/other-appellants.html
@@ -61,8 +61,8 @@
   }) }}
 
   {{ govukRadios({
-    idPrefix: 'another-appellant',
-    name: 'another-appellant',
+    idPrefix: 'other-appellants',
+    name: 'other-appellants',
     fieldset: {
       legend: {
         html: 'Do you want to add another appellant?',
