--- a/app/views/appeal/s78e/v1/task-list__prepare.html
+++ b/app/views/appeal/s78e/v1/task-list__prepare.html
@@ -5,7 +5,7 @@
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/appellant-check" aria-describedby="your-details-status">
+        <a class="govuk-link govuk-task-list__link" href="/appeal/contact-details/v1/who-applied?appeal=S78E" aria-describedby="your-details-status">
           Your details
         </a>
       </div>
