v10 of LPA appeals list, using filters

--- a/app/views/manage/appeals/v10/includes/current-appeals.html
+++ b/app/views/manage/appeals/v10/includes/current-appeals.html
@@ -12,7 +12,7 @@
 
   {{ govukTable({
     classes: 'govuk-!-margin-top-3',
-    caption: 'Active',
+    caption: 'Action required',
     captionClasses: 'govuk-table__caption--l',
     firstCellIsHeader: false,
     head: [
