Search addition to LPA v10 filtered appeal list (dashboard)

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -292,6 +292,11 @@
           </a>
         </li>
         <li>
+          <a href="manage/appeals/v10/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=&statement=&finalcomments=&proofs=&appellant-proofs=">
+            Planning appeals (list of appeals) navigation / filter concept
+          </a>
+        </li>
+        <li>
           <a href="/manage/appeals/v9/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=">
             Appeals list, questionnaire done
           </a>
