--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -23,7 +23,7 @@
 
     <section class="govuk-!-margin-bottom-6">
 
-      {% set version = "9" %}
+      {% set version = "10" %}
 
       <h2 class="govuk-heading-m">
         Version {{version}}
@@ -43,6 +43,26 @@
       <p class="govuk-!-margin-bottom-2">Changes:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          using a filter to split out appeal lists
+        </li>
+        <li>
+          search for appeals
+        </li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View dashboard',
+        href: 'v10/?action=&questionnaire=due&questionnaire-banner=no&current-appeals=yes&submitted-appeals=yes',
+        isStartButton: true
+      }) }}
+
+    </section>
+
+    {% set v9HTML %}
+
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
           showing withdrawn appeals
         </li>
         <li>
@@ -56,26 +76,9 @@
         isStartButton: true
       }) }}
 
-    </section>
+    {% endset -%}
 
     {% set v8HTML %}
-
-      {% set version = "8" %}
-
-      <h2 class="govuk-heading-m">
-        Version {{version}}
-        {{ govukTag({
-          classes: 'govuk-tag--green govuk-!-margin-left-2',
-          text: 'Ready for research'
-        }) }}
-      </h2>
-
-      <!-- <p>
-        Researched January 2023<br>
-        <a href="https://pins-ds.atlassian.net/l/cp/m5xUUVAn" class="govuk-link">
-          Confluence user research notes
-        </a>
-      </p> -->
 
       <p class="govuk-!-margin-bottom-2">Changes:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -290,6 +293,14 @@
       classes: 'govuk-!-margin-top-9',
       items: [
 
+        {
+          heading: {
+            html: 'Version 9 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v9HTML
+          }
+        },
         {
           heading: {
             html: 'Version 8 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
