--- a/app/views/manage/questionnaire/v15/appeal-process/significant-changes.html
+++ b/app/views/manage/questionnaire/v15/appeal-process/significant-changes.html
@@ -16,18 +16,52 @@
     Only tell us about changes that are relevant or material to the application.
   </p>
 
-  {% set otherChangesHTML %}
-
+  {% set localPlanHTML %}
     {{ govukTextarea({
-      name: 'significant-changes__other',
-      id: 'significant-changes__other',
-      value: data['significant-changes__other'],
+      name: 'localplanchange',
+      id: 'localplanchange',
+      value: data['localplanchange'],
+      rows: '5',
+      label: {
+        html: 'Enter the local plan changes'
+      }
+    }) }}
+  {% endset %}
+
+  {% set nationalPolicyHTML %}
+    {{ govukTextarea({
+      name: 'nationalpolicychange',
+      id: 'nationalpolicychange',
+      value: data['nationalpolicychange'],
+      rows: '5',
+      label: {
+        html: 'Enter the national policy changes'
+      }
+    }) }}
+  {% endset %}
+
+  {% set courtJudgmentChangeHTML %}
+    {{ govukTextarea({
+      name: 'courtjudgmentchange',
+      id: 'courtjudgmentchange',
+      value: data['courtjudgmentchange'],
+      rows: '5',
+      label: {
+        html: 'Enter the court judgment'
+      }
+    }) }}
+  {% endset %}
+
+  {% set otherChangesHTML %}
+    {{ govukTextarea({
+      name: 'otherchange',
+      id: 'otherchange',
+      value: data['otherchange'],
       rows: '5',
       label: {
         html: 'Enter the other significant changes'
       }
     }) }}
-
   {% endset %}
 
   {{ govukCheckboxes({
@@ -45,15 +79,24 @@
 	  items: [
 	    {
 	      value: "Adopted a new local plan",
-	      text: "Adopted a new local plan"
+	      text: "Adopted a new local plan",
+        conditional: {
+          html: localPlanHTML
+        }
 	    },
 	    {
 	      value: "National policy change",
-	      html: "National policy change"
+	      html: "National policy change",
+        conditional: {
+          html: nationalPolicyHTML
+        }
 	    },
 	    {
-	      value: "Court judgement",
-	      html: "Court judgement"
+	      value: "Court judgment",
+	      html: "Court judgment",
+        conditional: {
+          html: courtJudgmentChangeHTML
+        }
 	    },
 	    {
 	      value: "Other",
@@ -72,7 +115,5 @@
 	    }
 	  ]
 	}) }}
-
-
 
 {% endblock %}
